--- a/index.html
+++ b/index.html
@@ -48,5 +48,9 @@
             </div>
         </section>
     </div>  
+    <div class="sns">
+        <a href="https://www.facebook.com/"><img src="./images/facebook.png" alt="facebook"></a>
+        <a href="https://www.instagram.com/cott_on_swab_/"><img src="./images/instagram.png" alt="instagram"></a>
+    </div>
 </body>
 </html>
